Fix index page moving side on iphone && add type variable on SuccessModal

--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -204,8 +204,8 @@
             }
             .phone {
                 position: relative;
-                width: calc(100% + 30px);;
-                left: -15px;
+                width: 100%;;
+                right: -15px;
                 top: 0;
                 margin-bottom: 24px;
             }
